# Graduation_Project

./: .gitignore  README.md
AI/Eye Gaze Estimation Models/: README.md
AI/Eye Gaze Testing App/: README.md  main.py  main.ui  models.py  requirements.install
AI/Head Pose Estimation Models/: README.md
DesktopApp/: DMSFinalApp.pro  README.md  configswidget.cpp  datahandler.cpp  systemcontrol.cpp  systemcontrol.h
Jetson Environment Setup and Model Integration/: check_and_update_bashrc.sh  install_opencv4.8.0_Jetson.sh
Jetson Environment Setup and Model Integration/Face-Detection-Module-For-jetson/: CMakeLists.txt
Jetson Environment Setup and Model Integration/Face-Detection-Module_with_a0/: CMakeLists.txt  build_and_run.sh
Jetson Environment Setup and Model Integration/Face-Detection-Module_with_eye_gaze/: CMakeLists.txt  build_and_run.sh
Jetson Environment Setup and Model Integration/System/: cmake_flags_for_dnn_module.txt
Jetson Environment Setup and Model Integration/System_with_WHENet/: CMakeLists.txt
Jetson Environment Setup and Model Integration/System_with_WHENet/src/: main.cpp
Jetson Environment Setup and Model Integration/data/: README.md
Jetson Environment Setup and Model Integration/models/: README.md
Jetson SW/: README.md
Jetson SW/include/: dmsmanager.h  infer.h
Jetson SW/src/: commtcpcomponent.cpp  (+2 more)
build-DMSFinalApp-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_configswidget.h  ui_connectionwidget.h  ui_drivermonitoringwidget.h  ui_mainwindow.h  ui_readingswidget.h  ui_systemcontrol.h
(+67 files in other folders)
